new data processing and separating processing and analysis codes

--- a/pro_processing.ipynb
+++ b/pro_processing.ipynb
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ochieng' Oginga\\AppData\\Local\\Temp\\ipykernel_39968\\2981810954.py:2: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Ochieng' Oginga\\AppData\\Local\\Temp\\ipykernel_17364\\2981810954.py:2: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(r\"C:\\Users\\Ochieng' Oginga\\Documents\\Post_S\\Spring_2025\\Data_Science_II\\Project\\Data\\Oginga_Stage1.csv\")\n"
      ]
     },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3ff696fd-5cdf-46a1-8a82-ab02142e356b",
    "metadata": {},
    "outputs": [
@@ -449,18 +449,6 @@
       "\n",
       "[893292 rows x 2 columns]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ochieng' Oginga\\AppData\\Local\\Temp\\ipykernel_39968\\3815530800.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_clean.loc[:, 'ChgOffDate_binary'] = df_clean['ChgOffDate'].notna().astype(int)\n"
-     ]
     }
    ],
    "source": [
@@ -474,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "934b55a3-0915-4ef6-84ae-010442c39b2e",
    "metadata": {},
    "outputs": [
@@ -484,7 +472,7 @@
        "(893292, 28)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c8ae7c5f-8a7b-4d31-8824-06b275c063bd",
    "metadata": {},
    "outputs": [
@@ -530,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b0489ba2-9a6f-4f58-9cc4-2fc9525695fd",
    "metadata": {},
    "outputs": [
@@ -612,6 +600,123 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e37e6463-9406-4868-b3a1-440bfa337605",
+   "metadata": {},
+   "source": [
+    "iv. convert franchise column into binary \n",
+    "\n",
+    "Interested in seeing if a business is a franchise or not "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "510752ec-ff21-4191-887d-7288b01ef91a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean['IsFranchise'] = df_clean['FranchiseCode'].apply(lambda x: 0 if x in [0, 1] else 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e03e67-4e76-468c-a498-802b4d764b81",
+   "metadata": {},
+   "source": [
+    "v. Transform low doc and revline of credit into binary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8feb4d9e-5f85-49b6-98f8-b024c5c103f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#transforming lowdoc into binary\n",
+    "df_clean['LowDoc_binary'] = df_clean['LowDoc'].str.strip().str.upper().apply(lambda x: 1 if x == 'Y' else 0)\n",
+    "\n",
+    "#transforming revolving line of credit into binary \n",
+    "df_clean['RevLineCr_binary'] = df_clean['RevLineCr'].str.strip().str.upper().apply(lambda x: 1 if x == 'Y' else 0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c88c9cc6-74fe-4367-ba8e-6be24ddf9995",
+   "metadata": {},
+   "source": [
+    "vi. Hot Encoding NAICS using industrial standard "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2d7508d3-fcb3-4eee-b5ba-4298cae99b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to extract the sector and map it\n",
+    "def map_naics_sector(code):\n",
+    "    try:\n",
+    "        code = int(code)\n",
+    "        if code == 0:\n",
+    "            return 'Unknown'\n",
+    "        prefix = int(str(code)[:2])  # first two digits\n",
+    "        if prefix == 11:\n",
+    "            return 'Agriculture'\n",
+    "        elif prefix == 21:\n",
+    "            return 'Mining'\n",
+    "        elif prefix == 22:\n",
+    "            return 'Utilities'\n",
+    "        elif prefix == 23:\n",
+    "            return 'Construction'\n",
+    "        elif 31 <= prefix <= 33:\n",
+    "            return 'Manufacturing'\n",
+    "        elif prefix == 42:\n",
+    "            return 'Wholesale Trade'\n",
+    "        elif 44 <= prefix <= 45:\n",
+    "            return 'Retail Trade'\n",
+    "        elif 48 <= prefix <= 49:\n",
+    "            return 'Transportation'\n",
+    "        elif prefix == 51:\n",
+    "            return 'Information'\n",
+    "        elif prefix == 52:\n",
+    "            return 'Finance'\n",
+    "        elif prefix == 53:\n",
+    "            return 'Real Estate'\n",
+    "        elif prefix == 54:\n",
+    "            return 'Professional Services'\n",
+    "        elif prefix == 55:\n",
+    "            return 'Management'\n",
+    "        elif prefix == 56:\n",
+    "            return 'Admin & Waste Mgmt'\n",
+    "        elif prefix == 61:\n",
+    "            return 'Education'\n",
+    "        elif prefix == 62:\n",
+    "            return 'Healthcare'\n",
+    "        elif prefix == 71:\n",
+    "            return 'Arts & Recreation'\n",
+    "        elif prefix == 72:\n",
+    "            return 'Accommodation & Food'\n",
+    "        elif prefix == 81:\n",
+    "            return 'Other Services'\n",
+    "        elif prefix == 92:\n",
+    "            return 'Public Admin'\n",
+    "        else:\n",
+    "            return 'Other'\n",
+    "    except:\n",
+    "        return 'Unknown'\n",
+    "\n",
+    "\n",
+    "# Apply the mapping\n",
+    "df_clean['NAICS_Sector'] = df_clean['NAICS'].apply(map_naics_sector)\n",
+    "\n",
+    "# One-hot encode\n",
+    "df_clean = pd.get_dummies(df_clean, columns=['NAICS_Sector'], prefix='Sector')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fb25d8df-a051-4bfc-abd7-b1ee24911463",
    "metadata": {},
    "source": [
@@ -628,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "1147f270-2bbb-4877-a184-f2cf666629a7",
    "metadata": {},
    "outputs": [
@@ -643,41 +748,48 @@
       "30  CHICAGO BRICK UNLIMITED INC        MIAMI    FL  33186   \n",
       "32                    RZI, INC.  NEW ORLEANS    LA  70130   \n",
       "\n",
-      "                              Bank BankState   NAICS ApprovalDate ApprovalFY  \\\n",
-      "12           STEARNS BK NATL ASSOC        MN  445299     7-Feb-06       2006   \n",
-      "24                        HOPE FCU        MS  722211     7-Feb-06       2006   \n",
-      "28     WELLS FARGO BANK NATL ASSOC        SD  611110     7-Feb-06       2006   \n",
-      "30                  CITIBANK, N.A.        FL  238140     7-Feb-06       2006   \n",
-      "32  BUSINESS RES. CAP. SPECIALTY B        LA  532490     7-Feb-06       2006   \n",
+      "                              Bank BankState ApprovalDate ApprovalFY  Term  \\\n",
+      "12           STEARNS BK NATL ASSOC        MN     7-Feb-06       2006   162   \n",
+      "24                        HOPE FCU        MS     7-Feb-06       2006   126   \n",
+      "28     WELLS FARGO BANK NATL ASSOC        SD     7-Feb-06       2006    83   \n",
+      "30                  CITIBANK, N.A.        FL     7-Feb-06       2006    84   \n",
+      "32  BUSINESS RES. CAP. SPECIALTY B        LA     7-Feb-06       2006    60   \n",
       "\n",
-      "    Term  ...  RetainedJob  FranchiseCode  DisbursementDate  \\\n",
-      "12   162  ...            0          15100         31-Mar-06   \n",
-      "24   126  ...            0              1         30-Apr-06   \n",
-      "28    83  ...           23              1         28-Feb-06   \n",
-      "30    84  ...            4              1         28-Feb-06   \n",
-      "32    60  ...            0              1         31-May-06   \n",
+      "    NoEmp  ...  Sector_Mining  Sector_Other Services  \\\n",
+      "12      2  ...          False                  False   \n",
+      "24      7  ...          False                  False   \n",
+      "28     18  ...          False                  False   \n",
+      "30      4  ...          False                  False   \n",
+      "32      3  ...          False                  False   \n",
       "\n",
-      "    DisbursementGross  ChgOffPrinGr        GrAppv      SBA_Appv  \\\n",
-      "12       $253,400.00         $0.00   $253,400.00   $190,050.00    \n",
-      "24       $137,300.00         $0.00   $137,300.00   $116,705.00    \n",
-      "28       $438,541.00         $0.00   $100,000.00    $50,000.00    \n",
-      "30        $51,440.00         $0.00    $35,000.00    $17,500.00    \n",
-      "32        $50,000.00         $0.00    $50,000.00    $42,500.00    \n",
+      "    Sector_Professional Services Sector_Public Admin Sector_Real Estate  \\\n",
+      "12                         False               False              False   \n",
+      "24                         False               False              False   \n",
+      "28                         False               False              False   \n",
+      "30                         False               False              False   \n",
+      "32                         False               False               True   \n",
       "\n",
-      "   ChgOffDate_binary UrbanRural_binary MIS_Status_Binary  \n",
-      "12                 0                 0                 1  \n",
-      "24                 0                 0                 1  \n",
-      "28                 0                 0                 1  \n",
-      "30                 0                 0                 1  \n",
-      "32                 0                 0                 1  \n",
+      "   Sector_Retail Trade Sector_Transportation Sector_Unknown Sector_Utilities  \\\n",
+      "12                True                 False          False            False   \n",
+      "24               False                 False          False            False   \n",
+      "28               False                 False          False            False   \n",
+      "30               False                 False          False            False   \n",
+      "32               False                 False          False            False   \n",
       "\n",
-      "[5 rows x 23 columns]\n"
+      "    Sector_Wholesale Trade  \n",
+      "12                   False  \n",
+      "24                   False  \n",
+      "28                   False  \n",
+      "30                   False  \n",
+      "32                   False  \n",
+      "\n",
+      "[5 rows x 46 columns]\n"
      ]
     }
    ],
    "source": [
     "# Drop the specified columns from the DataFrame\n",
-    "df_clean = df_clean.drop(columns=['LoanNr_ChkDgt', 'ChgOffDate','UrbanRural', 'RevLineCr', 'LowDoc', 'BalanceGross','MIS_Status'])\n",
+    "df_clean = df_clean.drop(columns=['LoanNr_ChkDgt', 'ChgOffDate','UrbanRural', 'RevLineCr', 'LowDoc', 'FranchiseCode','MIS_Status', 'NAICS'])\n",
     "\n",
     "# Print the DataFrame to check the result\n",
     "print(df_clean.head())"
@@ -685,17 +797,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "aafc86dc-3981-4c26-98a5-cad832b5746e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(572333, 23)"
+       "(572333, 46)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "7f53ac64-572e-42f3-9b4c-becb580fbea2",
    "metadata": {},
    "outputs": [],
@@ -737,13 +849,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "0fbac699-0cad-417b-a657-892d5f1f406e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#save the clean dataframe to data folder\n",
-    "df_clean.to_csv(r\"C:\\Users\\Ochieng' Oginga\\Documents\\Post_S\\Spring_2025\\Data_Science_II\\Project\\Data\\Oginga_Stage2.csv\", index=False)"
+    "df_clean.to_csv(r\"C:\\Users\\Ochieng' Oginga\\Documents\\Post_S\\Spring_2025\\Data_Science_II\\Project\\Data\\Oginga_Stage3.csv\", index=False)"
    ]
   },
   {
