--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### SBA Loan Project \n",
     "\n",
-    "#### Josahn Oginga \n",
+    "#### Preprocessing Code  \n",
     "\n",
     "#### Stage 2"
    ]
